# Corewar

./: .gitignore  CMakeLists.txt  Makefile  a.out  a1  a2  d  huevina  my_asm  my_corewar  my_state  scr.sh  state  t  te  test.cor  test.s  test.sh
champs/: Car.cor  Car.s  Survivor.s
ft_printf/: Makefile  author  bonuses.c  buffer_mgmt.c  fill_float_arrays.c  fill_ldbl_arrays.c  fill_options.c  ft_printf.c  ft_printf.h  ftoa.c  ftoa_base_buff.c  get_integer.c  get_specifiers.c  get_unsigned.c  handle_bighex.c  handle_csp.c  handle_floats.c  handle_hexdecimals.c  handle_integers.c  handle_octals.c  handle_overflow_buffer.c  handle_strings.c  handle_ubighex.c  handle_unsigned.c  handle_uoctal.c  hanlde_uhex.c  itoa_base_buff.c  itoa_base_buff_u.c  itoa_base_extra_funcs.c  long_arithmetics.c  printing_floats.c  utoa_base_buff_ox.c
ft_printf/libft/: .ft_itoa_base.c.swp  Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstat.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstreverse.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort_int_tab.c  ft_str_is_printable.c  (+32 more)
includes/: assembler.h  corewar.h  corewar_visual.h  corewar_visual.h.gch  op.h
srcs/: add_sub.c  aff.c  and_or_xor.c  cycles_to_die_check.c  fork.c  game.c  handle_value.c  ld.c  live.c  main.c  op.c  operations.c  parse_arguments.c  parse_champions.c  st.c  zjmp.c
srcs/asm/: Makefile  assemble.c  assemble1.c  assemble2.c  assembler.c  assembler1.c  file_utils.c  header_parse.c  header_parse1.c  lexical_analysis.c  lexical_utils.c  lexical_utils1.c  op.c  utils.c
srcs/corewar/: add_sub.c  aff.c  and_or_xor.c  cycles_to_die_check.c  error.c  fork.c  game.c  handle_value.c  init_carriage.c  is_invalid_arg.c  ld.c  live.c  main.c  op.c  parse_arguments.c  parse_champion_parts.c  parse_champions.c  parse_flags.c  print.c  set_operation_code.c  st.c  validate_args.c  zjmp.c
srcs/visual/: arena.c  info_table.c  init.c  visual.c
