cmake_minimum_required(VERSION 3.17)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf)
include_directories(ft_printf/libft)
include_directories(includes)
include_directories(srcs)

add_executable(corewar
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_isspace.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_base.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstat.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_lstreverse.c
        ft_printf/libft/ft_lstsize.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_numlen.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_sort_int_tab.c
        ft_printf/libft/ft_str_is_printable.c
        ft_printf/libft/ft_strcapitalize.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/libft.h
        ft_printf/bonuses.c
        ft_printf/buffer_mgmt.c
        ft_printf/fill_float_arrays.c
        ft_printf/fill_ldbl_arrays.c
        ft_printf/fill_options.c
        ft_printf/ft_printf.c
        ft_printf/ft_printf.h
        ft_printf/ftoa.c
        ft_printf/ftoa_base_buff.c
        ft_printf/get_integer.c
        ft_printf/get_specifiers.c
        ft_printf/get_unsigned.c
        ft_printf/handle_bighex.c
        ft_printf/handle_csp.c
        ft_printf/handle_floats.c
        ft_printf/handle_hexdecimals.c
        ft_printf/handle_integers.c
        ft_printf/handle_octals.c
        ft_printf/handle_overflow_buffer.c
        ft_printf/handle_strings.c
        ft_printf/handle_ubighex.c
        ft_printf/handle_unsigned.c
        ft_printf/handle_uoctal.c
        ft_printf/hanlde_uhex.c
        ft_printf/itoa_base_buff.c
        ft_printf/itoa_base_buff_u.c
        ft_printf/itoa_base_extra_funcs.c
        ft_printf/long_arithmetics.c
        ft_printf/printing_floats.c
        ft_printf/utoa_base_buff_ox.c
        includes/corewar.h
        includes/op.h
        srcs/main.c
        srcs/op.c srcs/parse_arguments.c srcs/parse_champions.c srcs/game.c srcs/cycles_to_die_check.c srcs/handle_value.c srcs/live.c srcs/ld.c srcs/st.c srcs/add_sub.c srcs/and_or_xor.c srcs/fork.c srcs/aff.c srcs/zjmp.c srcs/print.c srcs/parse_flags.c srcs/init_carriage.c srcs/parse_champion_parts.c srcs/validate_args.c srcs/set_operation_code.c srcs/is_invalid_arg.c srcs/error.c)
